force-app/main/default/objects/FTP_credentials__mdt/FTP_credentials__mdt.object-meta.xml
<CustomObject>
    <label>FTP credential</label>
    <pluralLabel>FTP credentials</pluralLabel>
</CustomObject>