force-app/main/default/objects/FTP_credentials__mdt/fields/directory__c.field-meta.xml
<CustomField>
    <fullName>directory__c</fullName>
    <label>directory</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>