force-app/main/default/objects/FTP_credentials__mdt/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <label>endpoint</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>