force-app/main/default/objects/FTP_credentials__mdt/fields/errorRecipient__c.field-meta.xml
<CustomField>
    <fullName>errorRecipient__c</fullName>
    <label>errorRecipient</label>
    <required>true</required>
    <type>Email</type>
</CustomField>