force-app/main/default/objects/FTP_credentials__mdt/fields/host__c.field-meta.xml
<CustomField>
    <fullName>host__c</fullName>
    <label>host</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>