force-app/main/default/objects/FTP_credentials__mdt/fields/pass__c.field-meta.xml
<CustomField>
    <fullName>pass__c</fullName>
    <label>pass</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>