force-app/main/default/objects/FTP_credentials__mdt/fields/port__c.field-meta.xml
<CustomField>
    <fullName>port__c</fullName>
    <label>port</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>