force-app/main/default/objects/FTP_credentials__mdt/fields/privateKey__c.field-meta.xml
<CustomField>
    <fullName>privateKey__c</fullName>
    <label>privateKey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>