force-app/main/default/objects/FTP_credentials__mdt/fields/reportRecipients__c.field-meta.xml
<CustomField>
    <fullName>reportRecipients__c</fullName>
    <label>reportRecipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>