force-app/main/default/objects/FTP_credentials__mdt/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>